| Summary: | ASTERISK-19943: Ref leak in app_mixmonitor, manager_mixmonitor | ||
| Reporter: | Mark Murawski (kobaz) | Labels: | |
| Date Opened: | 2012-06-02 18:07:49 | Date Closed: | 2012-07-05 13:18:20 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_mixmonitor |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) mixmonitor-trunk-368394.patch | |
| Description: | If the call to mixmonitor_exec() inside manager_mixmonitor() is a failure, we leak a channel ref due to early return | ||
| Comments: | By: Mark Murawski (kobaz) 2012-06-02 18:09:23.330-0500 Attached patch By: Rusty Newton (rnewton) 2012-06-04 19:35:21.761-0500 Thanks Mark! By: Jonathan Rose (jrose) 2012-07-05 13:01:17.894-0500 Changing affected version to not include 1.8.X since the affected function is only in trunk | ||