app_mixmonitor: Fix a reference leak in manager_mixmonitor function

Manager_mixmonitor included an early return on failed executions of mixmonitor
that would result in a leaked channel reference.

(closes issue ASTERISK-19943)
Reported by: Mark Murawski
Patches:
	mixmonitor-trunk-368394.patch uploaded by Mark Murawski (license 5791)


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@369644 65c4cc65-6c06-0410-ace0-fbb531ad65f3